aboutUs page done, got images aligning correctly

--- a/src/About.css
+++ b/src/About.css
@@ -41,13 +41,23 @@ h2 {
   grid-column-gap: 1rem;
 }
 
+.team-member.left .member-image {
+  margin-left: auto;
+}
+
+
+.team-member.right .member-image {
+  margin-right: auto;
+}
+
 .member-image {
   grid-area: image;
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   object-fit: cover;
   border-radius: 50%;
   border: 2px solid #ffcb05;
+  margin: 0 1rem;
 }
 
 .member-info {
